Added support for static ffmpeg, fixed cwd issues in image_similarity

--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Idea
-.idea
+# IntelliJ IDE
+.idea/
+
+# Dolphin fm metadata
+.directory
+
+# FFmpeg builds are license incompatible with gpl so exclude from repo
+src/dependencies/ffmpeg/
